# slambook

./: .gitignore  CMakeLists.txt  README.md
src/ch6/: gaussNewton.cpp
src/ch8/: CMakeLists.txt
version1/ch10/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp
version1/ch10/ceres_custombundle/common/: BALProblem.cpp
version1/ch10/g2o_custombundle/: g2o_bundle.cpp
version1/ch10/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  projection.h
version1/ch10/g2o_custombundle/common/tools/: rotation.h
version1/ch11/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_gtsam.cpp
version1/ch12/: vocabulary.yml
version1/ch7/: pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
version2/: CMakeLists.txt
version2/src/: CMakeLists.txt
version2/src/ch6/: CMakeLists.txt
version2/src/ch8/: direct_method.cpp  optical_flow.cpp
